# polars-io-benchmark

./: .gitignore  LICENSE  POLARS_REPLICATION_REPORT.md  README.md  pyproject.toml
reports/: POLARS_REPLICATION_REPORT.md  REVIEW_REPORT.md
src/polars_io_benchmark/: __init__.py  benchmark.py  cli.py  plot.py
